[tool.poetry]
name = "python_fundamentals"
version = "0.1.0"
description = ""
authors = ["muaddib576 <36249678+muaddib576@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asciinema = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
test_paths = ["tests"]